added screenshot on double click option
Can now screenshot on double click if the double click event bubbles up to the window

--- a/chrome/options/options_page.html
+++ b/chrome/options/options_page.html
@@ -33,7 +33,11 @@
                 On Page Updated
         </label>
         <br/>
-
+        <label>
+                <input type="checkbox" id="ondoubleclick">
+                Screenshot On Double click
+        </label>
+        <br/>
         <label>
                 <input type="text" id="filepath">
                 FilePath in Downloads:
