--- a/chrome/options/options_page.html
+++ b/chrome/options/options_page.html
@@ -10,6 +10,8 @@
         </label>
         <br/>
         -->
+        <h1 id="optionsheading">Observatron Options</h1>
+        
         <div>
             <button id="defaults">Set To Defaults</button>
         </div>
@@ -65,6 +67,18 @@
 
         <div id="status"></div>
         <button id="save">Save</button>
+
+        <hr/>
+
+        <div id="credits">
+
+                <ul>
+                    <li><a href="https://github.com/eviltester/observatron" target="_blank">The Oservatron on Github</a></li>
+                    <li><a href="https://eviltester.com" target="_blank">EvilTester.com blog, books, and courses</a></li>
+                    <li><a href="https://compendiumdev.co.uk" target="_blank">Compendium Developments Ltd Consultancy</a></li>
+                </ul>
+        </div>
+
 
         <script src="options.js"></script>
     </body>
