added some code to capture form submissions and output as json

--- a/chrome/options/options_page.html
+++ b/chrome/options/options_page.html
@@ -41,6 +41,11 @@
         </label>
         <br/>
         <label>
+                <input type="checkbox" id="onpostformsubmit">
+                Log POST form contents to a file
+        </label>
+        <br/>
+        <label>
                 <input type="text" id="filepath">
                 FilePath in Downloads:
         </label>
