--- a/chrome/options/options_page.html
+++ b/chrome/options/options_page.html
@@ -85,6 +85,7 @@
         </div>
 
 
+        <script src="../javascript/observatron_options.js"></script>
         <script src="options.js"></script>
     </body>
 </html>
