--- a/chrome/options/options_page.html
+++ b/chrome/options/options_page.html
@@ -9,6 +9,10 @@
         <div>
             <button id="defaults">Set To Defaults</button>
         </div>
+
+        <h2>Screenshots Configuration</h2>
+        <p>Take screenshots based on various events:</p>
+
         <label>
                 <input type="checkbox" id="onscroll">
                 On Scroll
@@ -20,6 +24,15 @@
         </label>
         <br/>
         <label>
+                <input type="checkbox" id="ondoubleclick">
+                Screenshot On Double click
+        </label>
+        <br/>
+
+        <h2>Logging Configuration</h2>
+        <p>Take screenshots, mhtml and json logs based on various events:</p>
+
+        <label>
                 <input type="checkbox" id="onpageload">
                 On Page Load
         </label>
@@ -30,14 +43,11 @@
         </label>
         <br/>
         <label>
-                <input type="checkbox" id="ondoubleclick">
-                Screenshot On Double click
-        </label>
-        <br/>
-        <label>
                 <input type="checkbox" id="onpostformsubmit">
                 Log POST form contents to a file
         </label>
+
+        <h2>Output Configuration</h2>
         <br/>
         <label>
                 <input type="text" id="filepath">
@@ -51,6 +61,7 @@
         </label>
         <br/>
 
+        <h2>Timing Configuration</h2>
 
         <label>
                 <input type="number" id="scrolling_timeout">
@@ -64,6 +75,7 @@
         </label>
         <br/>
 
+        <h2>Remember to save changes</h2>
         <div id="status"></div>
         <button id="save">Save</button>
 
