--- a/chrome/sidepanel/sidepanel.html
+++ b/chrome/sidepanel/sidepanel.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Observatron Note</title>
+    <title>Observatron Sidepanel</title>
     <style>
         body { font-family: Arial, sans-serif; padding: 20px; }
         textarea { width: 100%; height: 100px; }
@@ -9,6 +9,11 @@
     </style>
 </head>
 <body>
+
+    <div>
+        <button id="takeScreenshot">Take Screenshot</button>
+        <button id="savePage">Save Page</button>
+    </div>
 
     <h2>Add Note to log</h2>
     <p>Format: (? question, ! bug, - todo, @customtype)</p>
@@ -19,6 +24,6 @@
     <br>
     <label><input type="checkbox" id="withScreenshot"> Include screenshot</label>
 
-    <script src="../javascript/note_handler.js"></script>
+    <script src="sidepanel.js"></script>
 </body>
 </html>
