initial element logging

--- a/chrome/sidepanel/sidepanel.html
+++ b/chrome/sidepanel/sidepanel.html
@@ -13,6 +13,7 @@
     <div>
         <button id="takeScreenshot">Take Screenshot</button>
         <button id="savePage">Save Page</button>
+        <button id="saveSelectedElement">Save Selected Element as Note</button>
     </div>
 
     <h2>Add Note to log</h2>
@@ -21,9 +22,11 @@
     <br>
     <button id="saveNote">Save Note</button>
     <button id="cancelNote">Cancel</button>
-    <br>
-    <label><input type="checkbox" id="withScreenshot"> Include screenshot</label>
+     <br>
+     <label><input type="checkbox" id="withScreenshot"> Include screenshot</label>
+     <br>
+     <label><input type="checkbox" id="withElementScreenshot"> Include element screenshot</label>
 
-    <script src="sidepanel.js"></script>
+     <script src="sidepanel.js"></script>
 </body>
 </html>
