element to note and screenshot

--- a/chrome/sidepanel/sidepanel.html
+++ b/chrome/sidepanel/sidepanel.html
@@ -13,7 +13,7 @@
     <div>
         <button id="takeScreenshot">Take Screenshot</button>
         <button id="savePage">Save Page</button>
-        <button id="saveSelectedElement">Save Selected Element as Note</button>
+        <button id="addSelectedElement">Add Selected Element to Note</button>
     </div>
 
     <h2>Add Note to log</h2>
