--- a/chrome/sidepanel/sidepanel.html
+++ b/chrome/sidepanel/sidepanel.html
@@ -10,6 +10,14 @@
 </head>
 <body>
 
+    <div style="margin-bottom:10px">
+        <details>
+            <summary>Options</summary>
+            <div id="options-container"></div>
+            <hr>
+        </details>
+    </div>
+
     <div>
         <button id="takeScreenshot">Take Screenshot</button>
         <button id="savePage">Save Page</button>
@@ -28,5 +36,7 @@
      <label><input type="checkbox" id="withElementScreenshot"> Include element screenshot</label>
 
      <script src="sidepanel.js"></script>
+    <script src="../javascript/observatron_options.js"></script>
+    <script src="../options/options.js"></script>
 </body>
 </html>
