--- a/chrome/sidepanel/sidepanel.html
+++ b/chrome/sidepanel/sidepanel.html
@@ -33,9 +33,15 @@
      <br>
      <label><input type="checkbox" id="withScreenshot"> Include screenshot</label>
      <br>
-     <label><input type="checkbox" id="withElementScreenshot"> Include element screenshot</label>
+      <label><input type="checkbox" id="withElementScreenshot"> Include element screenshot</label>
 
-     <script src="sidepanel.js"></script>
+      <h2>Notes Collection</h2>
+      <div style="margin-bottom: 10px;">
+          <button id="saveNotes">Save Notes As...</button>
+      </div>
+      <div id="notes-container"></div>
+
+      <script src="sidepanel.js"></script>
     <script src="../javascript/observatron_options.js"></script>
     <script src="../options/options.js"></script>
 </body>
