--- a/chrome/sidepanel/sidepanel.html
+++ b/chrome/sidepanel/sidepanel.html
@@ -38,6 +38,7 @@
       <h2>Notes Collection</h2>
       <div style="margin-bottom: 10px;">
           <button id="saveNotes">Save Notes As...</button>
+          <button id="clearNotes" style="margin-left: 10px; background-color: #ff6b6b; color: white;">Clear All Notes</button>
       </div>
       <div style="margin-bottom: 10px; padding: 5px; border: 1px solid #ccc;">
           <label>Filter by Type: </label>
