element screenshot improvements

--- a/chrome/sidepanel/sidepanel.html
+++ b/chrome/sidepanel/sidepanel.html
@@ -35,6 +35,7 @@
     <div>
         <button id="takeScreenshot">Take Screenshot</button>
         <button id="savePage">Save Page</button>
+        <button id="takeElementScreenshot">Take Element Screenshot</button>
         <button id="addSelectedElement">Add Selected Element to Note</button>
     </div>
 
